RESOLVED FIXED168596
[WebRTC] Fix some memory leaks in libwebrtc binding code
https://bugs.webkit.org/show_bug.cgi?id=168596
Summary [WebRTC] Fix some memory leaks in libwebrtc binding code
youenn fablet
Reported 2017-02-20 07:30:01 PST
Fix some memory leaks in libwebrtc binding code
Attachments
Patch (5.98 KB, patch)
2017-02-20 07:34 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-02-20 07:34:11 PST
WebKit Commit Bot
Comment 2 2017-02-20 09:26:00 PST
Comment on attachment 302144 [details] Patch Clearing flags on attachment: 302144 Committed r212644: <http://trac.webkit.org/changeset/212644>
WebKit Commit Bot
Comment 3 2017-02-20 09:26:04 PST
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 4 2017-02-20 10:41:39 PST
Note You need to log in before you can comment on or make changes to this bug.