[WebRTC] Fix some memory leaks in libwebrtc binding code https://bugs.webkit.org/show_bug.cgi?id=168596

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-20
Reviewed by Eric Carlson.

Source/WebCore:

Covered by manual testing.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::StatsCollector::StatsCollector): Using the libwebrtc way of creating such objects.
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
(WebCore::LibWebRTCMediaEndpoint::StatsCollector::create):
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::PeerConnectionFactoryAndThreads::OnMessage):

Source/WebKit2:

* NetworkProcess/webrtc/NetworkRTCProvider.cpp:
(WebKit::NetworkRTCProvider::OnMessage):

Canonical link: https://commits.webkit.org/185604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212644 268f45cc-cd09-0410-ab3c-d52691b4dbfc